@@ -1,0 +1,7 @@
+CORE
+wire_with_assignment1.sv
+
+^EXIT=0$
+^SIGNAL=0$
+--
+^warning: ignoring
